# bevy_asset_ron

./: Cargo.toml  LICENSE  README.md
assets/: settings.camera
assets/objects/: big_red.cubes  small_green.cubes
examples/: load_rons.rs
src/: lib.rs
