[package]
name = "bevy_asset_ron"
version = "0.3.0"
edition = "2021"
description = "Custom RON assets for Bevy"
repository = "https://github.com/inodentry/bevy_asset_ron"
license = "MIT"
keywords = ["bevy", "assets", "ron", "game", "engine"]
categories = ["game-engines"]
readme = "README.md"
documentation = "https://docs.rs/bevy_asset_ron/latest/bevy_asset_ron/"
exclude = ["assets/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { version = "0.6", default-features = false }
ron = "0.7"
serde = "1"

[dev-dependencies]
bevy = { version = "0.6", default-features = true }

[patch.crates-io]
bevy =  { git = "https://github.com/bevyengine/bevy", branch = "main" }
